--- a/EnclaveIFC.cabal
+++ b/EnclaveIFC.cabal
@@ -50,7 +50,7 @@ library
   build-depends:
       base >=4.7 && <5
     , binary
-    , bytestring
+    , bytestring >= 0.11
     , containers
     , network-simple
     , transformers
@@ -176,7 +176,7 @@ executable EnclaveIFC-exe
       EnclaveIFC
     , base >=4.7 && <5
     , binary
-    , bytestring
+    , bytestring >= 0.11
     , containers
     , crypton
     , network-simple
