--- a/EnclaveIFC.cabal
+++ b/EnclaveIFC.cabal
@@ -50,10 +50,11 @@ library
   build-depends:
       base >=4.7 && <5
     , binary
-    , bytestring >= 0.11
+    , bytestring >= 0.10
     , containers
     , network-simple
     , transformers
+    , ghc
   default-language: Haskell2010
   if (flag(enclave))
     cpp-options: -DENCLAVE
@@ -61,7 +62,8 @@ library
     cpp-options: -DUMMY
   if (flag(integrity-check))
     cpp-options: -DINTEGRITY
-    build-depends: crypton
+    build-depends: 
+      crypton
   else
     cpp-options: -DUMMY
 
@@ -176,11 +178,12 @@ executable EnclaveIFC-exe
       EnclaveIFC
     , base >=4.7 && <5
     , binary
-    , bytestring >= 0.11
+    , bytestring >= 0.10
     , containers
     , crypton
     , network-simple
     , transformers
+    , ghc
   default-language: Haskell2010
   if (flag(enclave))
     cpp-options: -DENCLAVE
