--- a/EnclaveIFC.cabal
+++ b/EnclaveIFC.cabal
@@ -56,6 +56,8 @@ library
     , transformers
     , ghc
     , ghc-paths
+    , cryptohash
+    , base16-bytestring
   default-language: Haskell2010
   if (flag(enclave))
     cpp-options: -DENCLAVE
@@ -186,6 +188,8 @@ executable EnclaveIFC-exe
     , transformers
     , ghc
     , ghc-paths
+    , cryptohash
+    , base16-bytestring
   default-language: Haskell2010
   if (flag(enclave))
     cpp-options: -DENCLAVE
