--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -8,5 +8,21 @@ load(
     "haskell_toolchain_library",
 )
 
-# gazelle:prefix github.com/example/project
-gazelle(name = "gazelle")
+
+
+load(
+    "@bazel_gazelle//:def.bzl",
+    "DEFAULT_LANGUAGES",
+    "gazelle",
+    "gazelle_binary",
+)
+
+gazelle(
+    name = "gazelle",
+    gazelle = ":gazelle_binary",
+)
+
+gazelle_binary(
+    name = "gazelle_binary",
+    languages = DEFAULT_LANGUAGES + ["@io_tweag_gazelle_cabal//gazelle_cabal"],
+)
